# audiorw

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: audiorw-config.cmake.in
dope/: deps.yml
dope/miniaudio/src/: CMakeLists.txt
include/audiorw/: audiorw.hpp
src/: audiorw.cpp
